--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,20 +1,6 @@
-<h3>{{title}}</h3>
-<table class="table">
-    <thead>
-      <tr>
-       
-        <th scope="col">ColorlId</th>
-        <th scope="col">ColorName</th>
-
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let color of colors">
-      
-        <td>{{color.colorId}}</td>
-        <td>{{color.colorName}}</td>
-
-      </tr>
-
-    </tbody>
-  </table>
+<ul class="list-group">
+  <li routerLink = "/cars" [class]="getAllColorClass()">Tüm Renkler</li>
+  <li (click)="setCurrentColor(color)"
+  routerLink = "/cars/color/{{color.colorId}}"
+  *ngFor="let color of colors" [class]="getColorClass(color)">{{color.colorName}}</li>
+</ul>
