--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,16 +1,26 @@
+<div
+  *ngIf="dataLoaded == false"
+  class="spinner-border text-primary"
+  role="status"
+>
+  <span class="visually-hidden">Loading...</span>
+</div>
 <h3>{{ title }}</h3>
 <div class="row">
   <div *ngFor="let car of carsDetail" class="card" style="width: 18rem">
-    <img [src]="imageUrl + car.imagePath" routerLink="/carDetail/{{ car.carId }}" class="card-img-top" alt="{{car.carName}} Image">
+    <img
+      [src]="imageUrl + car.imagePath"
+      routerLink="/carDetail/{{ car.carId }}"
+      class="card-img-top"
+      alt="{{ car.carName }} Image"
+    />
 
     <div class="card-body">
       <h5 class="card-title">{{ car.carName }}</h5>
       <p class="card-text">
         {{ car.brandName }} {{ car.colorName }} {{ car.dailyPrice }}
       </p>
-      <a
-        routerLink="/carDetail/{{ car.carId }}"
-        class="btn btn-primary"
+      <a routerLink="/carDetail/{{ car.carId }}" class="btn btn-primary"
         >detaylar..</a
       >
     </div>
