--- a/src/app/components/rental/rental.component.html
+++ b/src/app/components/rental/rental.component.html
@@ -1,19 +1,66 @@
-<form [formGroup]="rentalAddForm" (ngSubmit)="addRental()">
-
-<div class="form-group">
-  <select class="form-control" formControlName="customerId" required id="customerId" name="customerId">
-    <option *ngFor="let customer of customers" [value]="customer.customerId" class="form-control">{{customer.firstName}} {{customer.lastName}}</option>
-  </select>
+<button data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" class="btn btn-primary">Kirala</button>
+<!--<div style="margin-top: 10px;" *ngIf="!rentable" class="alert alert-danger">
+  Bu araç zaten kiralanmış
 </div>
-
-<div class="form-group">
-  <input type="date"  id="rentDate"name="rentDate" formControlName="rentDate" class="form-control">
+-->
+<!-- Modal -->
+<div *ngIf="car" class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">{{car.colorName}} | {{car.brandName}}</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+      </div>
+      <div *ngIf="car" class="modal-body">
+        <div class="daily-price">
+          <div class="mb-3 row">
+            <div class="col-md-3">
+              <label for="daily-price" class="form-label">Günlük Ücret:</label>
+            </div>
+            <div class="col-md-9">
+              <input [value]="car.dailyPrice | currency:'₺'" disabled="disabled" type="text" class="form-control" id="daily-price" >
+            </div>
+          </div>
+        </div>
+        <div class="rent-date">
+          <div class="mb-3 row">
+            <div class="col-md-3">
+              <label for="rent-date" class="form-label">Başlangıç :</label>
+            </div>
+            <div class="col-md-9">
+              <input (change)="onChangeEvent($event)" min="{{minDate}}" [(ngModel)]="rentDate" type="date" class="form-control" id="rent-date" placeholder="Bir gün seçiniz.">
+            </div>
+          </div>
+        </div>
+        <div class="return-date">
+          <div class="mb-3 row">
+            <div class="col-md-3">
+              <label for="return-date" class="form-label">Bitiş :</label>
+            </div>
+            <div class="col-md-9">
+              <input disabled='{{!firstDateSelected}}' min="{{minDate}}" max="{{maxDate}}" [(ngModel)]="returnDate" type="date" class="form-control" id="return-date" placeholder="Bir gün seçiniz.">
+            </div>
+          </div>
+        </div>
+        <div class="customers">
+          <div class="row">
+            <div class="col-md-3">
+              Müşteriler :
+            </div>
+            <div class="col-md-9">
+              <select #selectCustomer (change)="setCustomerId(selectCustomer.value)" class="form-select" aria-label="Default select example">
+                <option selected>Lütfen bir müşteri seçin</option>
+                <option *ngFor="let customer of customers" [value]="customer.customerId">{{customer.firstName}} {{customer.lastName}}</option>
+              </select>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+        <button (click)="addRental()" type="button" class="btn btn-primary" data-bs-dismiss="modal">Kirala</button>
+      </div>
+    </div>
+  </div>
 </div>
-
-<div>
-<input type="date"  id="returnDate"name="returnDate" formControlName="returnDate" class="form-control">
-</div>
-
-<button type="submit" class="btn btn-primary">Kirala</button>
-
-</form>
