--- a/src/app/components/car/car-detail/car-detail.component.html
+++ b/src/app/components/car/car-detail/car-detail.component.html
@@ -27,7 +27,8 @@
           <th scope="col">ColorName</th>
           <th scope="col">Description</th>
           <th scope="col">DailyPrice</th>
-          <th scope="col"></th>
+          <th scope="col">Rent</th>
+          
         </tr>
       </thead>
       <tbody>
