--- a/src/app/components/brand/brand-add/brand-add.component.html
+++ b/src/app/components/brand/brand-add/brand-add.component.html
@@ -19,7 +19,7 @@
                 </form>
             </div>
             <div class="card-footer">
-                <button class="btn btn-fill btn-primary" (click)="addBrand()">Add</button>
+                <button routerLink="/brands/add"class="btn btn-fill btn-primary" (click)="addBrand()">Add</button>
             </div>
         </div>
         
