--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -27,10 +27,14 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+        <div *ngIf="!authenticated">
+        <form [formGroup]="loginForm"(ngSubmit)="login()" class="d-flex">
+          <input class="form-control me-2" formControlName ="email" type="email" placeholder="e-mail" required>
+          <input class="form-control me-2" formControlName ="password" type="password" placeholder="password" required>
+        
+          <button class="btn btn-primary my-2 my-sm-0" [disabled]="!loginForm.valid" type="submit">Login</button>
         </form>
+        </div>
       </div>
     </div>
   </nav>
