--- a/src/app/components/rental/rental.component.html
+++ b/src/app/components/rental/rental.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="!rentable">
+<div *ngIf="rentable">
   <button data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" class="btn btn-primary">Kirala</button>
 </div>
-<div *ngIf="rentable" class="alert alert-danger">
+<div *ngIf="!rentable" class="alert alert-danger">
   Car already rented!
 </div>
 
