--- a/src/app/components/car/car-add/car-add.component.html
+++ b/src/app/components/car/car-add/car-add.component.html
@@ -54,6 +54,13 @@
 
                 </div>
             </div>
+            <div class="mb-3">
+                <label for="findexScore">Findex Score</label>
+            <div class="form-group">
+                <input type="number" id="findexScore" formControlName="findexScore" class="form-control" placeholder="findexScore"/>
+
+            </div>
+        </div>
                 </form>
             </div>
             <div class="card-footer">
