--- a/src/app/components/car/car-detail/car-detail.component.html
+++ b/src/app/components/car/car-detail/car-detail.component.html
@@ -26,6 +26,7 @@
           <th scope="col">BrandName</th>
           <th scope="col">ColorName</th>
           <th scope="col">Description</th>
+          <th scope="col">Findex</th>
           <th scope="col">DailyPrice</th>
           <th scope="col">Rent</th>
           
@@ -39,6 +40,7 @@
           <td>{{ car.brandName }}</td>
           <td>{{ car.colorName }}</td>
           <td>{{ car.description }}</td>
+          <td>{{ car.findeksScore}}</td>
           <td>{{ car.dailyPrice | currency:"₺" }}</td>
           <td><app-rental></app-rental></td>
         </tr>
