--- a/src/app/components/car/car-add/car-add.component.html
+++ b/src/app/components/car/car-add/car-add.component.html
@@ -55,9 +55,9 @@
                 </div>
             </div>
             <div class="mb-3">
-                <label for="findexScore">Findex Score</label>
+                <label for="findeksScore">Findeks Score</label>
             <div class="form-group">
-                <input type="number" id="findexScore" formControlName="findexScore" class="form-control" placeholder="findexScore"/>
+                <input type="number" id="findeksScore" formControlName="findeksScore" class="form-control" placeholder="findeksScore"/>
 
             </div>
         </div>
