--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -28,10 +28,9 @@
       <h5 class="card-title">{{ car.carName }} {{car.modelYear}}</h5>
       <p class="card-text">
        Brand: {{ car.brandName }} 
-       Color:{{ car.colorName }}
-       Description{{car.description}} 
-       Findex :{{car.findeksScore}}
-       Price : {{ car.dailyPrice |currency:"₺" }}
+       Color: {{ car.colorName }}
+       Description: {{car.description}} 
+       Price: {{ car.dailyPrice |currency:"₺" }}
       </p>
       <div class="d-flex justify-content-between">
         <div>
