--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -19,20 +19,13 @@
     </div>
     <div class="mb-3 row">
         <div class="col-md-4">
-            <label for="firstName" class="form-label">Kart Sahibinin Adı : </label>
+            <label for="nameOnTheCard" class="form-label">Kart Üzerindeki Adı Soyadı : </label>
         </div>
         <div class="col-md-8">
-            <input [(ngModel)]="firstName" type="text" class="form-control" id="firstName" placeholder="örn: Gökhan">
+            <input [(ngModel)]="nameOnTheCard" type="text" class="form-control" id="nameOnTheCard" placeholder="örn: Gökhan Sönmez">
         </div>
     </div>
-    <div class="mb-3 row">
-        <div class="col-md-4">
-            <label for="lastName" class="form-label">Kart Sahibinin Soyadı : </label>
-        </div>
-        <div class="col-md-8">
-            <input [(ngModel)]="lastName" type="text" class="form-control" id="lastName" placeholder="örn: Sönmez">
-        </div>
-    </div>
+    
     <div class="row">
         <div class="col-md-6">
             <div class="mb-3">
