--- a/src/app/components/car/car-detail/car-detail.component.html
+++ b/src/app/components/car/car-detail/car-detail.component.html
@@ -40,7 +40,7 @@
           <td>{{ car.brandName }}</td>
           <td>{{ car.colorName }}</td>
           <td>{{ car.description }}</td>
-          <td>{{ car.findexScore}}</td>
+          <td>{{ car.findeksScore}}</td>
           <td>{{ car.dailyPrice | currency:"₺" }}</td>
           <td><app-rental></app-rental></td>
         </tr>
