--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -9,6 +9,7 @@
         />
         <img src="https://img.icons8.com/color/48/000000/maestro.png" />
     </div>
+    
     <div class="mb-3 row">
         <div class="col-md-4">
             <label for="cardNumber" class="form-label">Kredi Kartı Numaranızı Giriniz :</label>
@@ -40,7 +41,28 @@
             </div>   
         </div>
     </div>
-    <div>
-        <button (click)="addRental()" type="button" class="btn btn-primary">İşlemi Tamamla</button>
+ <div>
+<button (click)="addRental()" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    İşlemi Tamamla
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button (click)="addPayment()" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Kartınızı kaydetmek istermisiniz
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button (click)="saveCard()" type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
     </div>
 </div>
