--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -9,42 +9,51 @@
         />
         <img src="https://img.icons8.com/color/48/000000/maestro.png" />
     </div>
-    
-    <div class="mb-3 row">
-        <div class="col-md-4">
-            <label for="cardNumber" class="form-label">Kredi Kartı Numaranızı Giriniz :</label>
+    <form [formGroup]="cardAddForm">
+      <div *ngIf="customerCard.length>0" class="mb-3" style="width: 12rem;">
+        <label for="customerCard">KayıtlıKartlar</label>
+        <select class="form-control" (ngModelChange)="setCardInfos()" formControlName="customerCard" required id="customerCard" name="customerCard">
+          <option *ngFor="let card of customerCard" [value]="card.cardId" class="form-control">{{card.nameOnTheCard}}</option>
+        </select>
         </div>
-        <div class="col-md-8">
-            <input [(ngModel)]="cardNumber" type="text" class="form-control" id="cardNumber" placeholder="örn: 8109771495247556">
-        </div>
-    </div>
-    <div class="mb-3 row">
-        <div class="col-md-4">
-            <label for="nameOnTheCard" class="form-label">Kart Üzerindeki Adı Soyadı : </label>
-        </div>
-        <div class="col-md-8">
-            <input [(ngModel)]="nameOnTheCard" type="text" class="form-control" id="nameOnTheCard" placeholder="örn: Gökhan Sönmez">
-        </div>
-    </div>
-    
-    <div class="row">
-        <div class="col-md-6">
-            <div class="mb-3">
-                <label for="cvv" class="form-label">Güvenlik kodu : </label>
-                <input [(ngModel)]="cVV" type="text" class="form-control" id="cvv" placeholder="örn: 123">
+      <div class="form-floating mb-3">
+         <input type="text" id="nameOnTheCard" class="form-control"
+                placeholder="nameOnTheCard" formControlName="nameOnTheCard">
+         <label for="nameOnTheCard">Kart Üzerindeki Ad ve Soyad</label>
+      </div>
+
+      <div class="form-floating mb-3">
+         <input type="text" id="cardNumber" class="form-control"
+                placeholder="cardNumber" formControlName="cardNumber">
+         <label for="cardNumber">Kart Numarası</label>
+      </div>
+
+      <div class="row">
+         <div class="col-lg-6">
+            <div class="form-floating mb-3">
+               <input type="text" id="expirationDate" class="form-control"
+                      placeholder="expirationDate" formControlName="expirationDate">
+               <label for="expirationDate">Son Kullanım Tarihi</label>
             </div>
-        </div>
-        <div class="col-md-6">
-            <div class="mb-3">
-                <label for="expirationDate" class="form-label">Son Kullanım Tarihi : </label>
-                <input [(ngModel)]="expirationDate" type="text" class="form-control" id="expirationDate" placeholder="örn: 20/27">
-            </div>   
-        </div>
-    </div>
- <div>
-<button (click)="addRental()" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    İşlemi Tamamla
-  </button>
+         </div>
+         <div class="col-lg-6">
+            <div class="form-floating mb-3">
+               <input type="text" id="cvv" class="form-control"
+                      placeholder="cvv" formControlName="cvv">
+               <label for="cvv">CVV</label>
+            </div>
+         </div>
+      </div>
+
+      <div class="text-end">
+        <button  (click)="addRental()" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Ödeme Yap
+        </button>
+      </div>
+
+   </form>
+  
+
   
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -60,9 +69,9 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <button (click)="saveCard()" type="button" class="btn btn-primary">Save changes</button>
+          <button (click)="noSaveCard()" type="button" class="btn btn-primary">Just Payment</button>
         </div>
       </div>
     </div>
   </div>
     </div>
-</div>
