add car  image and fixed user login

--- a/src/app/components/navi/user-profile/user-profile.component.html
+++ b/src/app/components/navi/user-profile/user-profile.component.html
@@ -1,11 +1,8 @@
 <section id="user-panel">
-    <span>
-      Welcome {{userName}}
-    </span>
     
     <button class="btn btn-primary my-2 my-sm-0" type="button" data-bs-toggle="dropdown"
         aria-expanded="false">
-      Panel
+        {{userName}}
     </button>
     <ul class="dropdown-menu p-0">
         <li><a class="dropdown-item" routerLink="/user/settings">Profile Settings</a></li>
@@ -15,6 +12,7 @@
             </li>
             <h6 class="dropdown-header">Administration</h6>
             <li><a class="dropdown-item" routerLink="/cars/add/">Add Car</a></li>
+            <li><a class="dropdown-item" routerLink="/cars/add-image/">Add Car Image</a></li>
             <li><a class="dropdown-item" routerLink="/colors/add/">Add Color</a></li>
             <li><a class="dropdown-item" routerLink="/brands/add/">Add Brand</a></li>
         </div>
