--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -60,7 +60,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Save Card</h5>
           <button (click)="addPayment()" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -68,7 +68,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button (click)="saveCard()" type="button" class="btn btn-primary">Save changes</button>
+          <button (click)="saveCard()" type="button" class="btn btn-primary">Save card</button>
           <button (click)="noSaveCard()" type="button" class="btn btn-primary">Just Payment</button>
         </div>
       </div>
